apps/prometheus/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: prometheus.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
